Adds all missing content. General polish. New images. Code Samples. Optional Content boxes

--- a/pages/lessons/phase-0/step-1.mdx
+++ b/pages/lessons/phase-0/step-1.mdx
@@ -3,9 +3,7 @@ import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
 
 
 # Step 1: Import the LaunchDarkly SDK
-For this lesson, we will be working out of the `index.js` file inside of the `module01` directory. Click the button below to open the correct file now:
-
-<button> Open File </button>
+For this lesson, we will be working out of the `index.js` file inside of the `module01` directory. 
 
 Before we can initialize our client, we'll need to import the **LaunchDarkly SDK**.
 
