--- a/pages/lessons/phase-2/Introduction.mdx
+++ b/pages/lessons/phase-2/Introduction.mdx
@@ -7,7 +7,7 @@ LaunchDarkly allows us to do a lot more with our feature flags than merely toggl
 We'll refer to this capability as **Targeting Rollouts.** This capability enables us to use rulesets of varying complexity to affect which variation gets served to a subset of our users. This is useful for a variety or reasons, but a few examples might be:
 
 - Turning on a feature only for users with specific app version
-- Exposing specific functionality to a geographic reason
+- Exposing specific functionality to a geographic region
 - Gating access to a feature for specific account types
 
 **Targeting Rollouts** is an easy capability to adopt with LaunchDarkly. We'll show you how in this exercise.
