fixes component paths

--- a/pages/phase-0/step-2.mdx
+++ b/pages/phase-0/step-2.mdx
@@ -1,9 +1,9 @@
 import SyntaxHighlighter from 'react-syntax-highlighter';
-import SdkKeyInput from '../../../components/SdkKeyInput'
-import DynamicCode from '../../../components/DynamicCode'
-import OptionalContent from '../../../components/OptionalContent'
+import SdkKeyInput from '../../components/SdkKeyInput'
+import DynamicCode from '../../components/DynamicCode'
+import OptionalContent from '../../components/OptionalContent'
 import { useState } from 'react';
-import { getSdkKeyFromLocalStorage } from '../../../lib/flagHelpers';
+import { getSdkKeyFromLocalStorage } from '../../lib/flagHelpers';
 import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
 
 # Step 2: Add Your SDK Key
