--- a/pages/phase-0/step-4.mdx
+++ b/pages/phase-0/step-4.mdx
@@ -1,5 +1,5 @@
-import LearningModule from '../../../components/LearningModule';
-import SDKSetupModule from '../../../components/SDKSetupModule';
+import LearningModule from '../../components/LearningModule';
+import SDKSetupModule from '../../components/SDKSetupModule';
 import SyntaxHighlighter from 'react-syntax-highlighter';
 import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
 
