--- a/pages/phase-1/step-1.mdx
+++ b/pages/phase-1/step-1.mdx
@@ -1,6 +1,6 @@
-import FlagKeyInput from '../../../components/FlagKeyInput'
-import FlagNameGenerator from '../../../components/FlagNameGenerator'
-import OptionalContent from  '../../../components/OptionalContent'
+import FlagKeyInput from '../../components/FlagKeyInput'
+import FlagNameGenerator from '../../components/FlagNameGenerator'
+import OptionalContent from  '../../components/OptionalContent'
 
 # Step 1: Create Flag
 
