--- a/pages/phase-1/step-2.mdx
+++ b/pages/phase-1/step-2.mdx
@@ -1,7 +1,7 @@
 import SyntaxHighlighter from 'react-syntax-highlighter';
 import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
-import { getFirstFlagFromLocalStorage } from '../../../lib/flagHelpers';
-import FlagKeyAndValue from '../../../components/FlagKeyAndValue';
+import { getFirstFlagFromLocalStorage } from '../../lib/flagHelpers';
+import FlagKeyAndValue from '../../components/FlagKeyAndValue';
 
 # Step 2: Add feature flag to code
 
