--- a/pages/phase-2/step-1.mdx
+++ b/pages/phase-2/step-1.mdx
@@ -1,6 +1,6 @@
 import SyntaxHighlighter from 'react-syntax-highlighter';
 import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
-import { getFirstFlagFromLocalStorage } from '../../../lib/flagHelpers';
+import { getFirstFlagFromLocalStorage } from '../../lib/flagHelpers';
 
 # Step 1: Evaluation Contexts
 
