--- a/pages/phase-2/step-2.mdx
+++ b/pages/phase-2/step-2.mdx
@@ -1,5 +1,5 @@
-import UserTargetingModule from '../../../components/UserTargetingModule';
-import OptionalContent from '../../../components/OptionalContent';
+import UserTargetingModule from '../../components/UserTargetingModule';
+import OptionalContent from '../../components/OptionalContent';
 import SyntaxHighlighter from 'react-syntax-highlighter';
 import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
 
