--- a/pages/phase-2/step-3.mdx
+++ b/pages/phase-2/step-3.mdx
@@ -1,4 +1,4 @@
-import UserTargetingModule from '../../../components/UserTargetingModule';
+import UserTargetingModule from '../../components/UserTargetingModule';
 
 # Step 3: Combine Multiple Targeting Rules
 
