--- a/pages/phase-1/step-3.mdx
+++ b/pages/phase-1/step-3.mdx
@@ -1,4 +1,4 @@
-import BrokenFeatureModule from '../../../components/BrokenFeatureModule';
+import BrokenFeatureModule from '../../components/BrokenFeatureModule';
 import SyntaxHighlighter from 'react-syntax-highlighter';
 import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
 
