more polish and refinement. Breaks up phase 3 by steps. Adds dynamic text component. Looking shiny

--- a/pages/phase-0/step-2.mdx
+++ b/pages/phase-0/step-2.mdx
@@ -24,7 +24,7 @@ If not, switch to the correct project
 
 ![Selecting a Projecty and Environment](/images/selecting-project.gif)
 
-Next, we'll use the **Global Search** keyboard shorcut: 
+Next, we'll use the **Global Search** keyboard shortcut: 
 
 : `⌘ + k`
 
