--- a/pages/phase-2/step-1.mdx
+++ b/pages/phase-2/step-1.mdx
@@ -41,7 +41,7 @@ The reason you might want want to add a few extra attributes to that object is t
 
 We've created a few contexts for you, each with unique attribute values, in `module03/index.js`. Go ahead and have a look at them now.
 
-In this scenario, our **evaluation contexts** represent a user evaluating feature flags— which is why they have attributes such as `email` and `name` and `device`— but keep in mind that an evaluation context could also represent a machine, such as a specific server or cluster. Here's an example of what that user context might look like:
+In this scenario, our **evaluation contexts** represent a user evaluating feature flags— which is why they have attributes such as `email` and `name` and `device`— but keep in mind that an evaluation context could also represent a machine, such as a specific server or cluster. Here's an example of what that context might look like:
 
 <SyntaxHighlighter showLineNumbers="true" startingLineNumber={1} language="javascript" style={docco}>
 {
