--- a/pages/phase-2/step-3.mdx
+++ b/pages/phase-2/step-3.mdx
@@ -4,7 +4,7 @@ import UserTargetingModule from '../../components/UserTargetingModule';
 
 In the previous example, the logic was pretty simple: `if android return true`. We're using a `boolean` flag and the `is one of` operator, but there are a variety of operators available for building targeting rules. 
 
-Let's add a slightly more complex targeting rule and see how it impacts our users. For this one, we'll be using the `app_version` attribute, and target only users with app version `2.0`. Here's how you do it:
+Let's add a slightly more complex targeting rule and see how it impacts our users. For this one, we'll use the `app_version` attribute, and target only users with app version `2.0`. Here's how you do it:
 
 ![Adding second targeting rule](/images/adding-second-rule.gif)
 
